<?xml version="1.0"?>
<package format="2">
  <name>z1_bringup</name>
  <version>0.0.0</version>
  <description>The z1_bringup package</description>

  <author email="davesarmoury@gmail.com">Dave Niewinski</author>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>unitree_gazebo</exec_depend>
  <exec_depend>z1_controller</exec_depend>
  <exec_depend>z1_moveit_config</exec_depend>
  <exec_depend>z1_ros_control</exec_depend>
  <exec_depend>z1_viz</exec_depend>

</package>
