<?xml version="1.0"?>
<package format="2">
  <name>z1_controller</name>
  <version>0.0.0</version>
  <description>The z1_controller package</description>

  <maintainer email="laikago@unitree.cc">unitree</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

</package>
