<?xml version="1.0"?>
<package format="2">
  <name>z1_hw</name>
  <version>0.1.0</version>
  <description>z1_hw provides hardware interface for using z1 robot with ros_control</description>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>control_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>z1_sdk</depend>
</package>
