<?xml version="1.0"?>
<package format="2">
  <name>z1_ros_control</name>
  <version>0.0.0</version>
  <description>The z1_ros_control package</description>

  <author email="davesarmoury@gmail.com">Dave Niewinski</author>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>control_msgs</depend>
  <depend>actionlib_msgs</depend>

  <export>
  </export>
</package>
