<?xml version="1.0"?>
<package format="2">
  <name>z1_rviz</name>
  <version>0.1.0</version>
  <description>The z1_rviz package</description>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>z1_description</exec_depend>

</package>
